--- a/roles/kafka/files/kafka-mesos.properties.j2
+++ b/roles/kafka/files/kafka-mesos.properties.j2
@@ -1,4 +1,4 @@
 storage=file:kafka-mesos.json
-master=zk://{{ mesos_master }}:2181/mesos
-zk={{ mesos_master }}:2181
-api=http://{{ mesos_master }}:7000
+master=zk://node1:2181/mesos
+zk=node1:2181
+api=http://node1:7000
