--- a/roles/kafka/templates/kafka-mesos.properties.j2
+++ b/roles/kafka/templates/kafka-mesos.properties.j2
@@ -1,4 +1,4 @@
 storage=file:kafka-mesos.json
-master=zk://{{ mesos_master }}:2181/mesos
+master={{ mesos_master }}:5050
 zk={{ mesos_master }}:2181
 api=http://{{ mesos_master }}:7000
